# grove

./: .gitignore  CHANGELOG.md  DEVELOPMENT_LOG.md  ROADMAP.md  ROADMAP_LOG.md  TESTING.md  index.html  package-lock.json  package.json  tsconfig.json  ux-roadmap.md  vite.config.ts  vitest.config.ts
.github/workflows/: test.yml
assets/icon-source/: README.md
docs/: README.md
docs/api/: README.md  json-api-spec.md
docs/planning/: README.md
docs/users/: features.md  getting-started.md
scripts/: generate-icons.mjs  prepare-sidecar.sh
src/: App.vue  main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/keys/: grove.key.pub
src-tauri/src/: commands.rs  config_files.rs  fs_safety.rs  hooks_fs.rs  lib.rs  main.rs  operation_state.rs  tray.rs  types.rs  updater.rs  watcher.rs  wt.rs
src/components/: BatchDeleteDialog.test.ts  BatchDeleteDialog.vue  CloneRepositoryModal.vue  CommandPalette.test.ts  CommandPalette.vue  CommitList.vue  CreateWorktreeModal.vue  Dashboard.test.ts  Dashboard.vue  DeleteWorktreeDialog.vue  ErrorBoundary.vue  FileChangesList.vue  GlobalConfigPanel.vue  GradeBadge.vue  HealthPanel.test.ts  HealthPanel.vue  HelpModal.vue  LoadingScreen.vue  OperationProgressPanel.vue  OverviewDashboard.test.ts  OverviewDashboard.vue  RepoList.test.ts  RepoList.vue  RepoManagementModal.vue  RepoManagementPanel.vue  SearchInput.vue  SelectionActionBar.test.ts  SelectionActionBar.vue  ServicesPanel.vue  SettingsModal.vue  SettingsPanel.vue  StatusBadge.vue  UpdateBanner.vue  VirtualWorktreeList.vue  WorktreeCard.test.ts  WorktreeCard.vue  WorktreeDetailsPanel.test.ts  WorktreeDetailsPanel.vue  WorktreeStatusBadges.vue
src/composables/: index.ts  useAppStore.ts  useAutoRefresh.ts  useBackgroundFetch.ts  useCommandRegistry.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useNotifications.ts  useOperationProgress.ts  useOrphanedDetection.ts  useOverview.test.ts  useOverview.ts  useRecent.ts  useRecentSwitches.ts  useRelativeTime.test.ts  useRelativeTime.ts  useRepos.test.ts  useRepos.ts  useResizableSidebar.ts  useSearch.test.ts  useSearch.ts  useStaleDetection.ts  useToast.test.ts  useToast.ts  useTrayBadge.ts  useUpdater.ts  useWorktreeFilters.test.ts  useWorktreeFilters.ts  useWorktreeSelection.test.ts  useWorktreeSelection.ts  useWorktreeWatcher.ts  useWorktrees.test.ts  useWorktrees.ts  useWt.test.ts  useWt.ts
src/stores/: hooks.ts  index.ts  overview.test.ts  overview.ts  repoConfig.ts  services.test.ts  services.ts  settings.test.ts  settings.ts  templates.ts  worktrees.test.ts  worktrees.ts
src/test/: setup.ts
src/types/: index.ts  progress.ts  wt.test.ts  wt.ts
src/utils/: clipboard.ts  errorHandling.test.ts  errorHandling.ts  healthIssues.test.ts  healthIssues.ts
(+48 files in other folders)
